# PiMemePlayer

./: .gitignore  FEATURES.md  README.md  pyproject.toml  requirements.txt
deploy/: tyspeaker.service
deploy/bluez-alsa/: README.md
deploy/systemd/journald.conf.d/: tyspeaker-persistent.conf
deploy/systemd/system/bluealsa.service.d/: override.conf
deploy/systemd/system/bluetooth.service.d/: 10-tyspeaker-clean-cache.conf
deploy/systemd/system/tyspeaker.service.d/: offline.conf
deploy/systemd/user/: tyspeaker-keepalive.service
deploy/udev/: 99-pwm-gpio.rules
deploy/wireplumber/: 80-a2dp-only.lua
src/tyspeaker/: __init__.py  __main__.py  app.py  audio.py  beeps.py  bluetooth.py  config.py  engine.py  gps.py  gps_stats.py  hotspot.py  inputs.py  library.py  logsetup.py  mixer.py  playlist.py  power.py  settings.py  web.py
src/tyspeaker/static/gallery/: README.md
src/tyspeaker/templates/: index.html
