[project]
name = "tyspeaker"
version = "0.1.0"
description = "Push-button audio/sample player with a LAN web UI for a Raspberry Pi Zero 2 W"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
]

[project.optional-dependencies]
# Installed on the Pi only; gpiozero+lgpio ship with Raspberry Pi OS Bookworm.
pi = ["gpiozero>=2.0", "lgpio>=0.2"]
dev = ["pytest>=8.0"]

[project.scripts]
tyspeaker = "tyspeaker.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tyspeaker = ["templates/*.html", "static/*.svg", "static/gallery/*"]
